--- a/docs/assets/css/responsive.css
+++ b/docs/assets/css/responsive.css
@@ -248,8 +248,9 @@
     max-width: 95% !important;
     margin: 0 2.5% !important;
   }
-    .md-content__inner p {
-      .md-content__inner p { color: #e5e5e5!important; }
+
+  .md-content__inner p {
+    color: #e5e5e5 !important;
   }
 
   nav.md-tabs {
